--- a/templates/index.html
+++ b/templates/index.html
@@ -151,6 +151,7 @@
       </div>
       <!-- 가로 한줄당 최대 3개로 수정 -->
       <div class="card-deck" id="card-listing"></div>
+      </div>
     </div>
   </body>
 </html>
