--- a/templates/hskwords.html
+++ b/templates/hskwords.html
@@ -38,6 +38,8 @@
       rel="stylesheet"
     />
     <script>
+      let hanzi, pinyin, hsk_level, entry_url, word_class, meaning;
+
       $(document).ready(function () {
         $("#word-listing").html("");
         wordlisting();
@@ -49,13 +51,83 @@
           data: {},
           success: function (response) {
             let wordlists = response["wordlist"];
+            $("#word-listing").empty();
             for (let i = 0; i < wordlists.length; i++) {
               let hanzi = wordlists[i]["hanzi"];
-              let temp_html = `<button type="button" class="list-group-item list-group-item-action">${hanzi}</button>`;
+              let pinyin = wordlists[i]["pinyin"];
+              let hsk_level = wordlists[i]["hsk_level"];
+              let entry_url = wordlists[i]["entry_url"];
+              let word_class = wordlists[i]["word_class"];
+              let meaning = wordlists[i]["meaning"];
+
+              let temp_html = `<button type="button" class="list-group-item list-group-item-action"
+              onclick="worddetail('${hanzi}','${pinyin}','${hsk_level}','${entry_url}','${word_class}','${meaning}')">${hanzi}
+              <small>${pinyin}</small>
+              </button>`;
               $("#word-listing").append(temp_html);
             }
           },
         });
+      }
+      function levelfilter(levelnum) {
+        $.ajax({
+          type: "GET",
+          url: "/hskwords",
+          data: {},
+          success: function (response) {
+            let wordlists = response["wordlist"];
+            $("#word-listing").empty();
+            for (let i = 0; i < wordlists.length; i++) {
+              let hanzi = wordlists[i]["hanzi"];
+              let pinyin = wordlists[i]["pinyin"];
+              let hsk_level = wordlists[i]["hsk_level"];
+              let entry_url = wordlists[i]["entry_url"];
+              let word_class = wordlists[i]["word_class"];
+              let meaning = wordlists[i]["meaning"];
+
+              if (hsk_level == "HSK" + levelnum) {
+                let temp_html = `<button type="button" class="list-group-item list-group-item-action"
+                onclick="worddetail('${hanzi}','${pinyin}','${hsk_level}','${entry_url}','${word_class}','${meaning}')">${hanzi}
+                <small>${pinyin}</small>
+                </button>`;
+                $("#word-listing").append(temp_html);
+              } else {
+              }
+            }
+          },
+        });
+      }
+      function worddetail(
+        hanzi,
+        pinyin,
+        hsk_level,
+        entry_url,
+        word_class,
+        meaning
+      ) {
+        console.log(hanzi);
+        let detailcard_html = `<div class="card">
+            <div class="card-body">
+              <h5 class="card-title">
+                ${hanzi}<span class="badge badge-pill badge-info badge-level"
+                  >${hsk_level}</span
+                >
+              </h5>
+              <h6 class="card-subtitle mb-2 text-muted">${pinyin}</h6>
+              <p class="card-text">
+                <strong>(${word_class})</strong>
+                ${meaning}
+              </p>
+              <a
+                href="${entry_url}"
+                target="_blank"
+                class="card-link"
+                >Go to Naver Dictionary</a
+              >
+            </div>
+          </div>`;
+        $("#detail_card").empty();
+        $("#detail_card").append(detailcard_html);
       }
     </script>
     <style>
@@ -78,10 +150,10 @@
       }
       .card-title {
         font-family: "Noto Serif SC", serif;
-        font-size: 200%;
+        font-size: 400%;
       }
       .badge-level {
-        font-size: 40%;
+        font-size: 20%;
         margin-left: 5px;
       }
     </style>
@@ -91,47 +163,78 @@
       <div class="row header">
         <div class="col">
           <h1 id="header-title">Chinese Word Master</h1>
+          <!-- HSK레벨별 필터영역 -->
+          HSK level:
+          <div class="btn-group mr-2" role="group" aria-label="First group">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              onclick="levelfilter('1')"
+              value="1"
+            >
+              1
+            </button>
+            <button
+              type="button"
+              class="btn btn-secondary"
+              onclick="levelfilter('2')"
+              value="2"
+            >
+              2
+            </button>
+            <button
+              type="button"
+              class="btn btn-secondary"
+              onclick="levelfilter('3')"
+              value="3"
+            >
+              3
+            </button>
+            <button
+              type="button"
+              class="btn btn-secondary"
+              onclick="levelfilter('4')"
+              value="4"
+            >
+              4
+            </button>
+            <button
+              type="button"
+              class="btn btn-secondary"
+              onclick="levelfilter('5')"
+              value="5"
+            >
+              5
+            </button>
+            <button
+              type="button"
+              class="btn btn-secondary"
+              onclick="levelfilter('6')"
+              value="6"
+            >
+              6
+            </button>
+            <button
+              type="button"
+              class="btn btn-secondary"
+              onclick="wordlisting()"
+              value="all"
+            >
+              All
+            </button>
+          </div>
         </div>
+        <!-- 헤더2 (나중에 요소 추가할 영역) -->
         <div class="col">헤더영역 2</div>
       </div>
       <div class="row">
+        <!-- 단어 리스팅 영역 -->
         <div class="col-3">
-          <div class="list-group" id="word-listing">
-            <!-- <button
-                  type="button"
-                  class="list-group-item list-group-item-action active"
-                >
-                  Cras justo odio
-                </button> -->
-            <button
-              type="button"
-              class="list-group-item list-group-item-action"
-            >
-              Dapibus ac facilisis in
-            </button>
-            <button
-              type="button"
-              class="list-group-item list-group-item-action"
-            >
-              Morbi leo risus
-            </button>
-            <button
-              type="button"
-              class="list-group-item list-group-item-action"
-            >
-              Porta ac consectetur ac
-            </button>
-            <!-- <button
-                  type="button"
-                  class="list-group-item list-group-item-action"
-                  disabled
-                >
-                  Vestibulum at eros
-                </button> -->
-          </div>
+          <div class="list-group" id="word-listing"></div>
         </div>
+        <!-- 단어 디테일 카드 영역 -->
         <div class="col-9">
-          <div class="card">
+          <div class="card" id="detail_card">
             <div class="card-body">
               <h5 class="card-title">
                 学生<span class="badge badge-pill badge-info badge-level"
@@ -139,14 +242,16 @@
                 >
               </h5>
               <h6 class="card-subtitle mb-2 text-muted">[ xué‧sheng ]</h6>
-              <p class="card-text">1. 학생 2. 学徒(1) 3. 남자 어린이</p>
+              <p class="card-text">
+                <strong>(명사)</strong>
+                1. 학생 2. 学徒(1) 3. 남자 어린이
+              </p>
               <a
                 href="https://zh.dict.naver.com/#/entry/zhko/3c64f1ad0cb54ac584c8d03e7f8080a1"
                 target="_blank"
                 class="card-link"
-                >Go to the dict page</a
+                >Go to Naver Dictionary</a
               >
-              <a href="#" class="card-link">Delete</a>
             </div>
           </div>
         </div>
